--- a/geeksForGeeks.html
+++ b/geeksForGeeks.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     <h1>Welcome to My Webpage</h1>
-    <p>This is my first paragraph of text! henced proved</p>
+    <p>This is my first paragraph of text! henced proved All Rights reserved</p>
 </body>
 </html>
